--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Eric Landgrebe
-subtitle: My Projects, Throughts and Work Experience
+subtitle: An assortment of opinion peices on machine learning, and projects I am working on
 ---
