--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Eric Landgrebe
-subtitle: My Projects, Thoughts, and Work Experience
+subtitle: An assortment of projects and thoughts on Machine Learning
 ---
